# cpp-course-2018

./: .gitignore  README.md
HW01/: add_win.asm  mul_win.asm  mulwin.asm  subwin.asm
HW02/: .clang-format  CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp
HW02-03/: CMakeLists.txt  big_integer.cpp  big_integer.h
HW02-03/utils/: vector.cpp  vector.h
HW02/gtest/: gtest-all.cc
HW02/utils/: vector.cpp  vector.h
HW04/: CMakeLists.txt
HW04/include/: bitstring.h  huffman_engine.h
HW04/src/: driver.cpp  file_processor.cpp
HW04/src/huffman_algorithm/: bitstring.cpp  huffman_engine.cpp
HW04/test/: gtest-all.cc  gtest_main.cc  huffcompress_test.cpp  test2.txt
HW05/: CMakeLists.txt
HW05/include/: checker.hpp
HW05/include/core/: checker.hpp
HW05/include/gui/: controlpanel.h  directoryview.h  mainwindow.h
HW05/src/: checker.cpp  controlpanel.cpp  controlpanel.h  main.cpp  mainwindow.cpp  mainwindow.h
HW05/src/core/: checker.cpp  main.cpp
HW05/src/gui/: controlpanel.cpp  directoryview.cpp  mainwindow.cpp
HW05/test/: checker_test.cpp
HW06/: .clang-format  CMakeLists.txt
HW06/include/: TrigramIndex.h  document.h  indexdriver.h  indexworker.h  mainwindow.h  settingswindow.h  substringoccurrence.h  taskcontext.h  textviewdriver.h  trigram.h  trigramindex.h
HW06/src/: TrigramIndex.cpp  document.cpp  indexdriver.cpp  indexworker.cpp  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  settingswindow.cpp  settingswindow.ui  textviewdriver.cpp  trigram.cpp  trigramindex.cpp
HW06/test/: index_test.cpp
exam/: CMakeLists.txt  list.hpp  main.cpp
practice/: cppprakt.pro  main.cpp  simple_vector.cpp  simple_vector.h
